--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -20,7 +20,11 @@
             android:layout_marginBottom="128dp"
             android:text="Register"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:textColor="@android:color/white"
+            app:backgroundTint="@null"
+            android:backgroundTint="#2BEFB7"
+            />
 
         <Button
             android:id="@+id/btnReturn"
@@ -32,7 +36,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/btnRegister" />
+            app:layout_constraintStart_toEndOf="@+id/btnRegister"
+            android:textColor="@android:color/white"
+            app:backgroundTint="@null"
+            android:backgroundTint="#2BEFB7"/>
 
         <LinearLayout
             android:layout_width="398dp"
