--- a/app/src/main/res/layout/activity_verification_register.xml
+++ b/app/src/main/res/layout/activity_verification_register.xml
@@ -28,7 +28,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@android:color/white"
+        app:backgroundTint="@null"
+        android:backgroundTint="#2BEFB7"/>
 
     <LinearLayout
         android:layout_width="347dp"
