--- a/app/src/main/res/layout/activity_backup_post.xml
+++ b/app/src/main/res/layout/activity_backup_post.xml
@@ -2,12 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context="com.example.fypproject.UserMainPost">
-
+    tools:context=".BackupPost">
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -23,17 +20,14 @@
 
     <ImageView
         android:id="@+id/firebaseimage"
-        android:layout_width="143dp"
-        android:layout_height="138dp"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginVertical="30dp"
-        android:adjustViewBounds="true"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/selectImagebtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.509"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="30dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
@@ -41,7 +35,7 @@
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="32dp"
         android:text="Select Image"
         app:layout_constraintBottom_toTopOf="@+id/uploadimagebtn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,10 +45,11 @@
         android:id="@+id/uploadimagebtn"
         android:layout_width="0dp"
         android:layout_height="70dp"
+        android:layout_marginBottom="168dp"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="140dp"
         android:text="Upload Image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
