--- a/app/src/main/res/layout/activity_user_main_fragment.xml
+++ b/app/src/main/res/layout/activity_user_main_fragment.xml
@@ -1,64 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#6B000000"
-    android:backgroundTint="#6B000000"
-    android:orientation="vertical">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/linearLayout10"
         android:layout_width="match_parent"
+
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btnChatNav"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/black"
-            android:text="chat"
-            android:textColor="@android:color/white" />
 
-        <Button
-            android:id="@+id/btnPostNav"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/black"
-            android:text="post"
-            android:textColor="@android:color/white" />
+        <LinearLayout
+            android:id="@+id/linearLayout11"
+            android:layout_width="417dp"
+            android:layout_height="79dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/btnMusicNav"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/black"
-            android:text="music"
-            android:textColor="@android:color/white" />
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="91dp"
+                android:layout_height="78dp"
+                app:srcCompat="@drawable/logo"
+                tools:srcCompat="@drawable/logo" />
 
-        <Button
-            android:id="@+id/btnSettingNav"
-            android:layout_width="13dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@android:color/black"
-            android:textColor="@android:color/white" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tvBrand"
+                android:layout_width="223dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10sp"
+                android:paddingTop="30sp"
+                android:shadowColor="#AA8A8A"
+                android:text="Snowvie"
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+                android:textColor="@color/textColor"
+                android:textColorHint="#E60707"
+                android:textSize="30sp"
+                android:textStyle="bold" />
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragmentContainerView"
-            android:name="com.example.fypproject.ChatFragment"
+            <ImageView
+                android:id="@+id/btnSetting"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                app:srcCompat="@drawable/setting_icon"
+                tools:srcCompat="@drawable/setting_icon" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout12"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-</LinearLayout>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
+            tools:layout_editor_absoluteX="-43dp">
+
+            <Button
+                android:id="@+id/btnChatNav"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@android:color/black"
+                android:text="@string/chat"
+                android:textColor="@android:color/white" />
+
+            <Button
+                android:id="@+id/btnPostNav"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@android:color/black"
+                android:text="post"
+                android:textColor="@android:color/white" />
+
+            <Button
+                android:id="@+id/btnMusicNav"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@android:color/black"
+                android:text="music"
+                android:textColor="@android:color/white" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout12">
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fragmentContainerView"
+                android:name="com.example.fypproject.ChatFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                tools:layout="@layout/fragment_chat" />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
