--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <RelativeLayout
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#F50057"
-        tools:context=".MusicPlayer">
+        tools:context=".MusicPlayerActivity">
 
         <TextView
             android:id="@+id/song_title"
@@ -23,33 +25,32 @@
             android:singleLine="true"
             android:text="Title of the song"
             android:textColor="@color/white"
-            android:textSize="48sp" />
+            android:textSize="20dp" />
 
         <ImageView
+            android:layout_width="240dp"
+            android:layout_height="240dp"
             android:id="@+id/music_icon_big"
-            android:layout_width="480dp"
-            android:layout_height="464dp"
-            android:layout_above="@id/controls"
             android:layout_centerHorizontal="true"
             android:padding="20dp"
-            android:src="@drawable/music_icon_big" />
+            android:layout_above="@id/controls"
+            android:src="@drawable/music_icon_big"/>
 
         <RelativeLayout
-            android:id="@+id/controls"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="300dp"
+            android:id="@+id/controls"
             android:padding="40dp">
 
             <SeekBar
                 android:id="@+id/seek_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginBottom="30dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
                 android:backgroundTint="@color/white" />
 
             <TextView
@@ -63,22 +64,16 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
                 android:text="0:00"
-                android:textColor="@color/white"
-                android:textSize="48sp" />
-
+                android:textColor="@color/white" />
             <TextView
-                android:id="@+id/total_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/seek_bar"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
+                android:id="@+id/total_time"
                 android:text="0:00"
+                android:layout_alignParentEnd="true"
                 android:textColor="@color/white"
-                android:textSize="48sp" />
+                android:layout_margin="20dp"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -87,27 +82,26 @@
                 android:padding="20dp">
 
                 <ImageView
-                    android:id="@+id/previous"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_skip_previous_24"
+                    android:layout_centerVertical="true"
                     android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_baseline_skip_previous_24" />
-
+                    android:id="@+id/previous"/>
                 <ImageView
-                    android:id="@+id/next"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/ic_baseline_skip_next_24"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/ic_baseline_skip_next_24" />
+                    android:layout_alignParentEnd="true"
+                    android:id="@+id/next"/>
 
                 <ImageView
-                    android:id="@+id/pause_play"
-                    android:layout_width="92dp"
-                    android:layout_height="84dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_pause_circle_outline_24"
                     android:layout_centerInParent="true"
-                    android:src="@drawable/ic_baseline_pause_circle_outline_24" />
+                    android:id="@+id/pause_play"/>
 
             </RelativeLayout>
 
