--- a/app/src/main/res/layout/activity_setting_page.xml
+++ b/app/src/main/res/layout/activity_setting_page.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SettingPage">
@@ -23,8 +23,8 @@
             android:id="@+id/imageView4"
             android:layout_width="91dp"
             android:layout_height="78dp"
-            app:srcCompat="@drawable/logo"
-            tools:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/white_logo"
+            tools:srcCompat="@drawable/white_logo" />
 
         <TextView
             android:id="@+id/tvBrand"
@@ -46,8 +46,8 @@
             android:layout_height="50dp"
             android:layout_weight="1"
             android:clickable="true"
-            app:srcCompat="@drawable/setting_icon"
-            tools:srcCompat="@drawable/setting_icon" />
+            app:srcCompat="@drawable/black_setting"
+            tools:srcCompat="@drawable/black_setting" />
     </LinearLayout>
 
     <LinearLayout
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@android:color/black"
+            android:backgroundTint="@color/grey"
             android:text="@string/chat"
             android:textColor="@android:color/white" />
 
@@ -73,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@android:color/black"
+            android:backgroundTint="@color/grey"
             android:text="post"
             android:textColor="@android:color/white" />
 
@@ -82,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@android:color/black"
+            android:backgroundTint="@color/grey"
             android:text="music"
             android:textColor="@android:color/white" />
 
@@ -108,6 +108,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginBottom="20dp"
             android:text="User Profile"
+            android:backgroundTint="@color/grey"
             android:textAllCaps="false" />
 
         <Button
@@ -119,6 +120,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginBottom="20dp"
             android:text="Chat Room Background Setting"
+            android:backgroundTint="@color/grey"
             android:textAllCaps="false" />
 
         <androidx.appcompat.widget.SwitchCompat
@@ -148,6 +150,16 @@
             android:textSize="20dp"
             android:textStyle="bold"
             app:switchPadding="10dp" />
+
+        <Button
+            android:id="@+id/btnLogout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Log out"
+            android:backgroundTint="@color/grey"
+            android:textAllCaps="false" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
