--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#171717</color>
     <color name="colorAccent">#FFFFFF</color>
-
+    <color name ="red">#FFFF0000</color>
     <color name="textColor">#FFFFFF</color>
 
 </resources>
