--- a/app/src/main/res/layout/activity_user_music.xml
+++ b/app/src/main/res/layout/activity_user_music.xml
@@ -20,8 +20,8 @@
             android:id="@+id/imageView4"
             android:layout_width="91dp"
             android:layout_height="78dp"
-            app:srcCompat="@drawable/logo"
-            tools:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/white_logo"
+            tools:srcCompat="@drawable/white_logo" />
 
         <TextView
             android:id="@+id/tvBrand"
@@ -43,8 +43,8 @@
             android:layout_height="50dp"
             android:layout_weight="1"
             android:clickable="true"
-            app:srcCompat="@drawable/setting_icon"
-            tools:srcCompat="@drawable/setting_icon" />
+            app:srcCompat="@drawable/black_setting"
+            tools:srcCompat="@drawable/black_setting" />
     </LinearLayout>
 
     <LinearLayout
@@ -61,7 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@android:color/black"
+            android:backgroundTint="@color/grey"
             android:text="@string/chat"
             android:textColor="@android:color/white" />
 
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@android:color/black"
+            android:backgroundTint="@color/grey"
             android:text="post"
             android:textColor="@android:color/white" />
 
@@ -79,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@android:color/black"
+            android:backgroundTint="@color/grey"
             android:text="music"
             android:textColor="@android:color/white" />
 
