--- a/app/src/main/res/layout/activity_user_chat.xml
+++ b/app/src/main/res/layout/activity_user_chat.xml
@@ -42,6 +42,7 @@
             android:id="@+id/btnSetting"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginTop="18dp"
             android:layout_weight="1"
             android:clickable="true"
             app:srcCompat="@drawable/black_setting"
@@ -86,67 +87,66 @@
 
     </LinearLayout>
 
-    <RelativeLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleViewChat"
         android:layout_width="411dp"
-        android:layout_height="603dp"
-        android:background="@color/white"
+        android:layout_height="605dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout12"
-        tools:context=".chatActivity">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="15dp"
-            android:layout_marginTop="0dp"
-            android:background="#3D4E4C">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />
 
 
-        </androidx.appcompat.widget.Toolbar>
+    <!--    <RelativeLayout-->
+<!--        android:layout_width="411dp"-->
+<!--        android:layout_height="603dp"-->
+<!--        android:background="@color/white"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout12"-->
+<!--        tools:context=".chatActivity">-->
+
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="15dp"-->
+<!--            android:layout_marginTop="0dp"-->
+<!--            android:background="#3D4E4C">-->
 
 
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/include"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_below="@id/toolbar"
-            android:backgroundTint="#3D4E4C"
-            app:tabIndicatorColor="@color/white"
-            app:tabIndicatorHeight="3dp"
-            app:tabSelectedTextColor="@color/white"
-            app:tabTextColor="#77a3a7">
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/chat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Chats">
-
-            </com.google.android.material.tabs.TabItem>
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Status">
-
-            </com.google.android.material.tabs.TabItem>
+<!--        </androidx.appcompat.widget.Toolbar>-->
 
 
-        </com.google.android.material.tabs.TabLayout>
+<!--        <com.google.android.material.tabs.TabLayout-->
+<!--            android:id="@+id/include"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="?attr/actionBarSize"-->
+<!--            android:layout_below="@id/toolbar"-->
+<!--            android:backgroundTint="#3D4E4C"-->
+<!--            app:tabIndicatorColor="@color/white"-->
+<!--            app:tabIndicatorHeight="3dp"-->
+<!--            app:tabSelectedTextColor="@color/white"-->
+<!--            app:tabTextColor="#77a3a7">-->
 
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/fragmentcontainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/include"
-            android:layout_marginTop="0dp">
+<!--            <com.google.android.material.tabs.TabItem-->
+<!--                android:id="@+id/chat"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Chats">-->
 
-        </androidx.viewpager.widget.ViewPager>
+<!--            </com.google.android.material.tabs.TabItem>-->
 
 
-    </RelativeLayout>
+<!--        </com.google.android.material.tabs.TabLayout>-->
+
+<!--        <androidx.viewpager.widget.ViewPager-->
+<!--            android:id="@+id/fragmentcontainer"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_below="@id/include"-->
+<!--            android:layout_marginTop="0dp">-->
+
+<!--        </androidx.viewpager.widget.ViewPager>-->
+
+
+<!--    </RelativeLayout>-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
