--- a/app/src/main/res/layout/activity_user_music.xml
+++ b/app/src/main/res/layout/activity_user_music.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UserMusic">
@@ -41,6 +41,7 @@
             android:id="@+id/btnSetting"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginTop="18dp"
             android:layout_weight="1"
             android:clickable="true"
             app:srcCompat="@drawable/black_setting"
